--- a/Harden System Security/ReleaseNotes.txt
+++ b/Harden System Security/ReleaseNotes.txt
@@ -1,9 +1,28 @@
-✅ Updated the dependencies to the latest versions, including major ones such as .NET SDK and Windows App SDK.
+✅ Added a new security measure to the Microsoft Defender category that will force Microsoft Defender to run in a sandbox for enhanced protection against tampering.
 
-✅ Added icons to more areas that didn't have one, helping with discoverability and usability.
+✅ Window Appearance Customization
 
-✅ Activated additional thorough analyzers for the Harden System Security app, enabling early detection of more possible issues during compilation.
+Introduced a customization option in Settings to personalize the app window with colors selected from an integrated palette.
 
-✅ Aligned the update availability experience in the Harden System Security app with the one in AppControl Manager. Now, when an update is available, you'll see a small icon on the lower left corner on the Update page's icon, informing you that there is a new version available. As a reminder, you can turn off auto-update check in the Update page by simply toggling a button.
+Added an optional animated rainbow mode that smoothly cycles through the full color spectrum.
 
-✅ Improved the design of UI elements that show the total count of items in each list view. They now have a more sophisticated and consistent design across the entire app and show the count of the data instantly without any delay, so if there was even a few milliseconds delay before, it's not there anymore.
+Designed for high performance with an extremely minimal resource footprint.
+
+✅ New Home Page
+
+Debuted a new Home page that opens by default on app startup, engineered for speed and efficiency.
+
+Features refined visuals and purposeful animations that remain lightweight and responsive.
+
+Provides concise system HUDs at a glance:
+✔️ Current time
+✔️ Time zone
+✔️ Total RAM
+✔️ Total disk capacity
+✔️ System uptime
+✔️ App memory usage (total RAM used by the app)
+✔️ Internet speed (upload and download shown separately)
+✔️ Includes a modern spotlight section to quickly browse rotating news and content.
+✔️ Very subtle cyber web mesh background that periodically lights up at different coordinates.
+
+More enhancement will be applied to the Home page in future updates. Feel free to share your feedback on GitHub with me.
