--- a/Harden System Security/ReleaseNotes.txt
+++ b/Harden System Security/ReleaseNotes.txt
@@ -1,28 +1,9 @@
-✅ Added a new security measure to the Microsoft Defender category that will force Microsoft Defender to run in a sandbox for enhanced protection against tampering.
+✅ Removed 2 dependencies, "CommunityToolkit.WinUI.Behaviors" and "Microsoft.Xaml.Behaviors.WinUI.Managed". The result is reduced package size by ~150 KB for the app bundle and improved overall performance since the new codes are more targeted and optimized. This project always strives for leaner and more efficient codebases and less dependency usage.
 
-✅ Window Appearance Customization
+✅ Fixed a visual issue in Remote Desktop sessions on hosts without a GPU where the new home page's stage background displayed in a too bright color, making the text hard to read.
 
-Introduced a customization option in Settings to personalize the app window with colors selected from an integrated palette.
+✅ Added an extra check before applying/removing/verifying some of the security measures in the Microsoft Defender category related to the Defender antivirus, to make sure they have been initialized by the OS first.
 
-Added an optional animated rainbow mode that smoothly cycles through the full color spectrum.
+✅ Improved the user experience: When an operation is in progress using the Apply All, Remove All, or Verify All buttons on a page, the other buttons are temporarily disabled until it completes. The active button remains enabled, allowing the operation to be canceled. Similarly, when the Apply, Remove, or Verify button of an individual security measure is running, all other buttons are disabled until it finishes. This change conveys the intended usage of the UI elements more clearly.
 
-Designed for high performance with an extremely minimal resource footprint.
-
-✅ New Home Page
-
-Debuted a new Home page that opens by default on app startup, engineered for speed and efficiency.
-
-Features refined visuals and purposeful animations that remain lightweight and responsive.
-
-Provides concise system HUDs at a glance:
-✔️ Current time
-✔️ Time zone
-✔️ Total RAM
-✔️ Total disk capacity
-✔️ System uptime
-✔️ App memory usage (total RAM used by the app)
-✔️ Internet speed (upload and download shown separately)
-✔️ Includes a modern spotlight section to quickly browse rotating news and content.
-✔️ Very subtle cyber web mesh background that periodically lights up at different coordinates.
-
-More enhancement will be applied to the Home page in future updates. Feel free to share your feedback on GitHub with me.
+✅ To see the rest of the release notes (since they can't all be included here) please visit the GitHub release page: https://github.com/HotCakeX/Harden-Windows-Security/releases
